--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "illuminate/collections": "^12.14"
+        "illuminate/collections": "^12.14",
+        "phpmailer/phpmailer": "^6.10"
     },
     "autoload": {
         "psr-4": {
